--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-bootstrap": "^2.3.1",
+    "react-dom": "^18.1.0",
+    "react-dropzone": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
